# hermes-git-sync

./: .gitignore  .pre-commit-config.yaml  README.md  plugin.yaml  pyproject.toml
.github/workflows/: lint.yml
src/hermes_git_sync/: __init__.py  git_ops.py  sops_ops.py  sync.py
